@@ -2,6 +2,8 @@
 # This file is updated with Maddlog
 
 * Thu Aug 22 2019 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
+- Improved JdbcClient program by including the schema prefix when dumping
+  schema objects. It now behaves more similar to mclient -D -N.
 - Improved JdbcClient program. It now also dumps definitions of MERGE TABLE,
   REMOTE TABLE, REPLICA TABLE and STREAM TABLE when dumping all tables.
 
